--- a/appdetails.json
+++ b/appdetails.json
@@ -17,5 +17,6 @@
   ],
   "free":[
     {"id":0, "file":0, "city":"USA","country":"USA","image":"unitedstates","ip":"45.76.147.33","active":"true","signal":"a"},
+    {"id":1, "file":1, "city":"USA","country":"USA","image":"unitedstates","ip":"104.218.54.137","active":"true","signal":"a"}
   ]
 }
